Lab1-B004 Lab2 Finishing touches